# Python-business-science

./: .gitignore  main.py  pyproject.toml  settings.py  update_database.py
Challenge 1 2/: ch1_data_wrangle.ipynb  ch1_data_wrangle_SOLUTION.ipynb  ch2_sktime_ets.ipynb  ch2_sktime_ets_SOLUTION.ipynb
Challenge 1 2/.ipynb_checkpoints/: ch1_data_wrangle-checkpoint.ipynb
helper/: logger.py  utils.py
module1-jumpstart/: module1-sales-analysis.py  modules1-notes.md
module10/: 01_nb_convert.py
module2-databases/: extract_data.py  load_data.py  modules2-notes.md
module3-data-structure-analysis/: basic-data-structure-for-analysis.py  data_wrangling.py  module3-notes.md
module4/: module4_time_series.py  modules4-notes.md
module5/: aggregation_functions.py  func_summarize_by_time.py
module6/: arima_forecast.py  module6-notes.md  sktime_forest.py
module7/: forecast_plot_automation.py  module7-notes.md  plotnine_basic.py  plotnine_deepdive.py
module8/: 01_forecast_read_in_db.py  02_forecast_db_automation.py
module9/: 01_jupyter_analysis.ipynb  02_papermill_automation.py  03_run_reports.py  update_database.py
my_pandas_extension/: plot_forecast.py  timeseries_func.py  utils.py
reports/output/: sales_report_bikeshop.ipynb  sales_report_category_1.ipynb  sales_report_category_2.ipynb  sales_report_total_revenue.ipynb
reports/template/: jupyter_report_template.ipynb
transformer/: bike_order_transformer.py  data_access.py  forecasting.py  run_reports.py
